minecraft/stack.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Parameters": {
        "ServiceName": {
            "Type": "String"
        },
        "MinecraftImage": {
            "Type": "String"
        },
        "ContainerPort": {
            "Type": "Number",
            "Default": 25565
        },
        "InfrastructureStackName": {
            "Type": "String"
        }
    },
    "Resources": {
        "Cluster": {
            "Type": "AWS::ECS::Cluster",
            "Properties": {
                "ClusterName": {"Fn::Join": ["", [{"Ref": "ServiceName"}, "Cluster"]]}
            }
        },
        "Efs":{
          "Type": "AWS::EFS::FileSystem",
          "Properties": {}
        },
        "MountTargetSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {"Fn::ImportValue" : {"Fn::Sub" : "${InfrastructureStackName}-VPC"}},
                "GroupDescription": "Security group for mount target",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "2049",
                        "ToPort": "2049",
                        "SourceSecurityGroupId": {"Ref": "ContainerSecurityGroup"}
                    }
                ]
            }
        },
        "MountTarget": {
            "Type": "AWS::EFS::MountTarget",
            "Properties": {
                "FileSystemId": {"Ref": "Efs"},
                "SecurityGroups": [
                    {"Ref": "MountTargetSecurityGroup"}
                ],
                "SubnetId": {"Fn::ImportValue" : {"Fn::Sub" : "${InfrastructureStackName}-PublicSubnet1"}}
            }
        },
        "MountTarget2": {
            "Type": "AWS::EFS::MountTarget",
            "Properties": {
                "FileSystemId": {"Ref": "Efs"},
                "SecurityGroups": [
                    {"Ref": "MountTargetSecurityGroup"}
                ],
                "SubnetId": {"Fn::ImportValue" : {"Fn::Sub" : "${InfrastructureStackName}-PublicSubnet2"}}
            }
        },
        "TaskDefinition": {
            "Type": "AWS::ECS::TaskDefinition",
            "Properties": {
                "ContainerDefinitions": [
                    {
                        "Image": {"Ref": "MinecraftImage"},
                        "LogConfiguration": {
                            "LogDriver": "awslogs",
                            "Options": {
                                "awslogs-region": {"Ref": "AWS::Region"},
                                "awslogs-group": {"Ref": "LogGroup"},
                                "awslogs-stream-prefix": "ecs"
                            }
                        },
                        "Name": {"Ref": "ServiceName"},
                        "MountPoints": [
                            {
                                "ContainerPath": "/minecraft",
                                "SourceVolume": "minecraft-efs"
                            }
                        ],
                        "PortMappings": [
                            {
                                "ContainerPort": 25565
                            }
                        ]
                    }
                ],
                "Cpu": "1024",
                "ExecutionRoleArn": {"Ref": "ExecutionRole"},
                "Family": {"Fn::Join": ["",[{"Ref": "ServiceName"},"EcsTaskDefinition"]]},
                "Memory": "4096",
                "NetworkMode": "awsvpc",
                "RequiresCompatibilities": ["FARGATE"],
                "Volumes": [
                    {
                        "EfsVolumeConfiguration": {
                            "FileSystemId": { "Ref": "Efs" }
                        },
                        "Name": "minecraft-efs"
                    }
                ]
            }
        },
        "LogGroup": {
            "Type": "AWS::Logs::LogGroup",
            "Properties": {
                "LogGroupName": {"Fn::Join": ["", ["/ecs/", {"Ref": "ServiceName"}, "TaskDefinition"]]}
            }
        },
        "ExecutionRole": {
            "Type": "AWS::IAM::Role",
            "Properties": {
                "AssumeRolePolicyDocument": {
                    "Statement": [
                        {
                            "Effect": "Allow",
                            "Principal": {
                                "Service": "ecs-tasks.amazonaws.com"
                            },
                            "Action": "sts:AssumeRole"
                        }
                    ]
                },
                "ManagedPolicyArns": ["arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"]
            }
        },
        "Service": {
            "Type": "AWS::ECS::Service",
            "DependsOn": "Listener",
            "Properties": {
                "ServiceName": { "Ref": "ServiceName" },
                "Cluster": { "Ref": "Cluster" },
                "TaskDefinition": { "Ref": "TaskDefinition" },
                "DeploymentConfiguration": {
                    "MinimumHealthyPercent": 0,
                    "MaximumPercent": 100
                },
                "DesiredCount": 1,
                "LaunchType": "FARGATE",
                "NetworkConfiguration": {
                    "AwsvpcConfiguration": {
                        "AssignPublicIp": "ENABLED",
                        "Subnets": [
                            {"Fn::ImportValue" : {"Fn::Sub" : "${InfrastructureStackName}-PublicSubnet1"}},
                            {"Fn::ImportValue" : {"Fn::Sub" : "${InfrastructureStackName}-PublicSubnet2"}}
                        ],
                        "SecurityGroups": [{ "Ref": "ContainerSecurityGroup" }]
                    }
                },
                "LoadBalancers": [
                    {
                        "ContainerName": { "Ref": "ServiceName" },
                        "ContainerPort": 25565,
                        "TargetGroupArn": { "Ref": "TargetGroup" }
                    }
                ]
            }
        },
        "ContainerSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupName": {"Fn::Join": ["", [{"Ref": "ServiceName"}, "ContainerSecurityGroup"]]},
                "GroupDescription": {"Fn::Join": ["", [{"Ref": "ServiceName"}, "ContainerSecurityGroup"]]},
                "SecurityGroupIngress": [
                    {
                        "FromPort": 25565,
                        "ToPort": 25565,
                        "IpProtocol": "tcp",
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "VpcId": {"Fn::ImportValue" : {"Fn::Sub" : "${InfrastructureStackName}-VPC"}}
            }
        },
        "TargetGroup": {
            "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
            "Properties": {
                "Name": {"Fn::Join": ["", [{"Ref": "ServiceName"}, "TargetGroup"]]},
                "Port": 25565,
                "Protocol": "TCP",
                "TargetType": "ip",
                "VpcId": {"Fn::ImportValue" : {"Fn::Sub" : "${InfrastructureStackName}-VPC"}}
            }
        },
        "Listener": {
            "Type": "AWS::ElasticLoadBalancingV2::Listener",
            "Properties": {
                "DefaultActions": [
                    {
                        "TargetGroupArn": {"Ref": "TargetGroup"},
                        "Type": "forward"
                    }
                ],
                "LoadBalancerArn": {"Ref": "LoadBalancer"},
                "Port": 25565,
                "Protocol": "TCP"
            }
        },
        "LoadBalancer": {
          "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
          "Properties": {
                "Name": {"Fn::Join": ["", [{"Ref": "ServiceName"}, "LoadBalancer"]]},
                "Scheme": "internet-facing",
                "Type": "network",
                "Subnets": [
                    {"Fn::ImportValue" : {"Fn::Sub" : "${InfrastructureStackName}-PublicSubnet1"}},
                    {"Fn::ImportValue" : {"Fn::Sub" : "${InfrastructureStackName}-PublicSubnet2"}}
                ]
            }
        },
        "UnusedFileSystem": {
            "Type": "AWS::EFS::FileSystem",
            "Properties": {
                "PerformanceMode": "generalPurpose"
            }
        }
    }
}
